@@ -2,16 +2,16 @@
 # this repository contains the full copyright notices and license terms.
 from . import timedelta
 from .common import (
-    COLOR_SCHEMES, MODELACCESS, MODELHISTORY, MODELNAME, TRYTON_ICON,
-    VIEW_SEARCH, IconFactory, Login, Logout, RPCContextReload, RPCException,
-    RPCExecute, RPCProgress, Tooltips, apply_label_attributes, ask,
-    check_version, concurrency, data2pixbuf, date_format, ellipsize, error,
-    file_open, file_selection, file_write, filter_domain, generateColorscheme,
-    get_align, get_hostname, get_port, get_sensible_widget,
-    get_toplevel_window, hex2rgb, highlight_rgb, humanize, idle_add, mailto,
-    message, node_attributes, process_exception, resize_pixbuf, selection,
-    setup_window, slugify, sur, sur_3b, timezoned_date, to_xml,
-    untimezoned_date, userwarning, warning)
+    COLOR_SCHEMES, MODELACCESS, MODELHISTORY, MODELNAME, MODELNOTIFICATION,
+    TRYTON_ICON, VIEW_SEARCH, IconFactory, Login, Logout, RPCContextReload,
+    RPCException, RPCExecute, RPCProgress, Tooltips, apply_label_attributes,
+    ask, check_version, concurrency, data2pixbuf, date_format, ellipsize,
+    error, file_open, file_selection, file_write, filter_domain,
+    generateColorscheme, get_align, get_hostname, get_port,
+    get_sensible_widget, get_toplevel_window, hex2rgb, highlight_rgb, humanize,
+    idle_add, mailto, message, node_attributes, process_exception,
+    resize_pixbuf, selection, setup_window, slugify, sur, sur_3b,
+    timezoned_date, to_xml, untimezoned_date, userwarning, warning)
 from .domain_inversion import (
     concat, domain_inversion, eval_domain, extract_reference_models,
     filter_leaf, inverse_leaf, localize_domain, merge,
@@ -19,16 +19,16 @@ from .domain_inversion import (
 from .environment import EvalEnvironment
 
 __all__ = [
-    IconFactory, MODELACCESS, MODELHISTORY, MODELNAME, VIEW_SEARCH,
-    get_toplevel_window, get_sensible_widget, selection, file_selection,
-    slugify, file_write, file_open, mailto, message, warning, userwarning, sur,
-    sur_3b, ask, concurrency, error, to_xml, process_exception, Login, Logout,
-    node_attributes, hex2rgb, highlight_rgb, generateColorscheme, RPCException,
-    RPCProgress, RPCExecute, RPCContextReload, Tooltips, COLOR_SCHEMES,
-    filter_domain, timezoned_date, untimezoned_date, humanize, get_hostname,
-    get_port, resize_pixbuf, data2pixbuf, apply_label_attributes, ellipsize,
-    get_align, date_format, idle_add, domain_inversion, eval_domain,
-    localize_domain, merge, inverse_leaf, filter_leaf,
-    prepare_reference_domain, extract_reference_models, concat, simplify,
-    unique_value, EvalEnvironment, timedelta, check_version, TRYTON_ICON,
-    setup_window]
+    IconFactory, MODELACCESS, MODELHISTORY, MODELNAME, MODELNOTIFICATION,
+    VIEW_SEARCH, get_toplevel_window, get_sensible_widget, selection,
+    file_selection, slugify, file_write, file_open, mailto, message, warning,
+    userwarning, sur, sur_3b, ask, concurrency, error, to_xml,
+    process_exception, Login, Logout, node_attributes, hex2rgb, highlight_rgb,
+    generateColorscheme, RPCException, RPCProgress, RPCExecute,
+    RPCContextReload, Tooltips, COLOR_SCHEMES, filter_domain, timezoned_date,
+    untimezoned_date, humanize, get_hostname, get_port, resize_pixbuf,
+    data2pixbuf, apply_label_attributes, ellipsize, get_align, date_format,
+    idle_add, domain_inversion, eval_domain, localize_domain, merge,
+    inverse_leaf, filter_leaf, prepare_reference_domain,
+    extract_reference_models, concat, simplify, unique_value, EvalEnvironment,
+    timedelta, check_version, TRYTON_ICON, setup_window]
