@@ -9,27 +9,31 @@ class InfoBar(object):
     toolbar = None
 
     def create_info_bar(self):
-        self.info_label = Gtk.Label()
+        self.__box = Gtk.VBox()
+        self.__box.show()
+        self.__messages = set()
+        return self.__box
 
-        self.info_bar = Gtk.InfoBar()
-        self.info_bar.get_content_area().pack_start(
-            self.info_label, False, False, 0)
-        self.info_bar.set_show_close_button(True)
-        self.info_bar.connect('response', lambda i, r: i.hide())
+    def info_bar_add(self, message, type_=Gtk.MessageType.ERROR):
+        key = (message, type_)
+        if key not in self.__messages:
+            info_bar = Gtk.InfoBar()
+            self.__box.pack_start(info_bar, False, False, 0)
+            area = info_bar.get_content_area()
+            area.add(Gtk.Label(label=message))
+            info_bar.set_show_close_button(True)
+            info_bar.connect('response', self.__response, key)
+            info_bar.set_message_type(type_)
+            info_bar.show_all()
 
-    def response(self, bar, response):
-        if response == Gtk.ResponseType.CLOSE:
-            bar.hide()
+    def __response(self, widget, response, key):
+        self.__messages.add(key)
+        self.__box.remove(widget)
 
-    def message_info(self, message=None, type_=Gtk.MessageType.ERROR):
-        if message:
-            # Work around https://bugzilla.gnome.org/show_bug.cgi?id=710888
-            parent = self.info_bar.get_parent()
-            self.info_bar.unparent()
-            self.info_bar.set_parent(parent)
+    def info_bar_refresh(self):
+        for child in self.__box.get_children():
+            self.__box.remove(child)
 
-            self.info_label.set_label(message)
-            self.info_bar.set_message_type(type_)
-            self.info_bar.show_all()
-        else:
-            self.info_bar.hide()
+    def info_bar_clear(self):
+        self.info_bar_refresh()
+        self.__messages.clear()
