@@ -1,3 +1,4 @@
+* Support notification message
 * Add option to define logging output location
 * Remove TreeViewControl
 * Manage optional column
